# cpp_babel

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  appveyor.yml
Client/: BabelProject.pro  CMakeLists.txt  configure
Client/cmake_modules/: FindOpus.cmake  FindPortaudio.cmake  Findportaudio.cmake
Client/include/: opus.h  opus_custom.h  opus_defines.h  opus_multistream.h  opusfile.h
Client/include/QTHeaders/: addcontactdiag.h  dialogreceivecall.h  helloworld.h  signupdiag.h
Client/lib/: opus.lib  portaudio.lib
Client/spike/: Test.pro
Client/spike/ClientTest/: client.cpp  client.h  fortuneclient.pro  main.cpp
Client/src/: main.cpp
Client/src/QTSrcs/: dialogreceivecall.cpp  dialogreceivecall.ui  helloworld.cpp  helloworld.ui  logindiag.cpp  logindiag.ui  main.cpp  mainwindow.cpp  mainwindow.ui  receivecalldiag.cpp  receivecalldiag.ui  signupdiag.cpp  signupdiag.ui
Client/src/dialog/: addcontactdiag.cpp  addcontactdiag.ui  customnotificationdiag.cpp  customnotificationdiag.ui  logindiag.ui  mainwindow.cpp  receivecalldiag.ui  signupdiag.cpp
Client/src/dialog/abstract/ADialog/: ADialog.hpp
Client/src/dialog/class/AddContactDiag/: addcontactdiag.cpp  addcontactdiag.h  addcontactdiag.ui
Client/src/dialog/class/CustomNotificationDiag/: customnotificationdiag.cpp  customnotificationdiag.h
Client/src/dialog/class/LoginDiag/: logindiag.cpp  logindiag.h  logindiag.ui
Client/src/dialog/class/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/src/dialog/class/ReceiveCallDiag/: receivecalldiag.cpp  receivecalldiag.h
Client/src/dialog/class/SignupDiag/: signupdiag.cpp  signupdiag.h  signupdiag.ui
Client/src/dialog/interface/IDialog/: IDialog.hpp
Client/src/managers/Call/class/CallManager/: CallManager.cpp  CallManager.hpp
Client/src/managers/Communication/class/AudioCommunication/: AudioCommunication.cpp  AudioCommunication.hpp
Client/src/managers/Communication/class/TextCommunication/: TextCommunication.cpp  TextCommunication.hpp
Client/src/managers/Communication/class/VideoCommunication/: VideoCommunication.cpp  VideoCommunication.hpp
Client/src/managers/Communication/interface/ICommunication/: ICommunication.hpp
Client/src/managers/Contact/class/ContactManager/: ContactManager.cpp  ContactManager.hpp
Client/src/managers/Core/class/BabelClientManager/: BabelClientManager.cpp  BabelClientManager.hpp
Client/src/managers/GlobalMediaManager/class/GlobalMediaManager/: GlobalMediaManager.cpp  GlobalMediaManager.hpp
Client/src/managers/Network/class/NetworkManager/: NetworkManager.cpp  NetworkManager.hpp
Client/src/managers/UI/class/UIManager/: UIManager.cpp  UIManager.hpp
Client/src/managers/media/class/AudioManager/: AudioManager.cpp  AudioManager.hpp
Client/src/managers/media/class/TextManager/: TextManager.cpp  TextManager.hpp
Client/src/managers/media/class/VideoManager/: VideoManager.cpp  VideoManager.hpp
Client/src/managers/media/interface/IMediaManager/: IMediaManager.hpp
Client/src/network/class/QNetworkTcpClient/: QNetworkTcpClient.cpp  QNetworkTcpClient.hpp
Client/src/network/class/QNetworkUdp/: QNetworkUdp.cpp  QNetworkUdp.hpp
Client/src/network/interface/: INetworkTcpClient.hpp  INetworkUdp.hpp
Client/src/standalone/Interface/: ICodec.hpp
Client/src/standalone/class/Audio/: Audio.cpp  Audio.hpp
Client/src/standalone/class/Call/: Call.cpp  Call.hpp
Client/src/standalone/class/Codec/: Codec.cpp  Codec.hpp
Client/src/standalone/class/Contact/: Contact.cpp  Contact.hpp
Client/src/standalone/class/Error/: ContactException.hpp
Client/src/standalone/class/Join/: join.cpp  join.hpp
Client/src/standalone/class/Status/: Status.cpp  Status.hpp
Client/src/ui/: logindiag.cpp  mainwindow.cpp  receivecalldiag.ui  signupdiag.ui
Client/src/widget/class/AddContactDiag/: addcontactdiag.cpp  addcontactdiag.h  addcontactdiag.ui
Client/src/widget/class/AddToConversationDiag/: addtoconversationdiag.cpp  addtoconversationdiag.h  addtoconversationdiag.ui
Client/src/widget/class/CustomNotificationDiag/: customnotificationdiag.cpp  customnotificationdiag.h
Client/src/widget/class/LoginDiag/: logindiag.cpp  logindiag.h  logindiag.ui
Client/src/widget/class/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/src/widget/class/ReceiveCallDiag/: receivecalldiag.cpp  receivecalldiag.h  receivecalldiag.ui
Client/src/widget/class/SignupDiag/: signupdiag.cpp  signupdiag.cpp.autosave  signupdiag.h
Client/test/: Reboot.cpp  main.cpp
Server/: CMakeLists.txt  configure
Server/include/: BabelNetworkMacro.hpp  NetworkException.hpp
Server/src/: Server.cpp  Server.hpp  main.cpp
Server/src/Account/: Account.cpp  Account.hpp  AccountManager.cpp  AccountManager.hpp
Server/src/Call/: Call.cpp  Call.hpp  CallManager.cpp  CallManager.hpp
Server/src/Cmd/: HandleCmd.cpp  HandleCmd.hpp
Server/src/Cmd/Cmd/: CmdCallInvite.cpp  CmdCallInvite.hpp  CmdCallJoin.cpp  CmdCallJoin.hpp  CmdCallLeave.cpp  CmdCallLeave.hpp  CmdContactAdd.cpp  CmdContactAdd.hpp  CmdContactDelete.cpp  CmdContactDelete.hpp  CmdLeave.cpp  CmdLeave.hpp  CmdLogIn.cpp  CmdLogIn.hpp  CmdSignUp.cpp  CmdSignUp.hpp
Server/src/Cmd/Interfaces/: ICmd.hpp
Server/src/Error/: Errors.hpp
Server/src/Log/: LogInTerm.cpp  LogInTerm.hpp
Server/src/Network/Boost/: NetworkManagerBoost.cpp  NetworkManagerBoost.hpp  NetworkTcpServerBoost.cpp  NetworkTcpServerBoost.hpp  NetworkTcpServerTunnelBoost.cpp  NetworkTcpServerTunnelBoost.hpp
Server/src/Network/Interfaces/: INetworkManager.hpp  INetworkTcpServer.hpp  INetworkTcpServerTunnel.hpp
Server/src/Network/Protocol/: NetworkData.hpp
Server/test/: CMakeLists.txt  main.cpp  server_protocol.cpp
Server/test/FakeClient/: CMakeCache.txt  CMakeLists.txt  Client  Makefile  cmake_install.cmake  main.cpp
build_system/: appveyor.helper.py
doc/: BProto.txt  Desc du design orienté objet.txt
